web: Fix "Create thread" button overlapping notices

--- a/web/static/css/dfeed.css
+++ b/web/static/css/dfeed.css
@@ -136,7 +136,7 @@ body.navhidden #content {
 
 /*************** General rules ***************/
 
-#forum-content {
+#forum-content > table {
 	position: relative;
 }
 
